[gd_scene load_steps=4 format=3 uid="uid://7u4lcflylb5g"]

[ext_resource type="Script" path="res://HUD/hud.gd" id="1_jjqvf"]
[ext_resource type="Texture2D" uid="uid://8ycw0fuvfkce" path="res://HUD/Art Assets/hud 4 boxes.png" id="1_jtmo7"]
[ext_resource type="Texture2D" uid="uid://dwbchwu1wgxa3" path="res://HUD/Art Assets/Selector.png" id="2_3gjbi"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_jjqvf")

[node name="Inventory" type="Sprite2D" parent="."]
position = Vector2(576, 600)
scale = Vector2(0.77, 0.65)
texture = ExtResource("1_jtmo7")

[node name="Selector" type="Sprite2D" parent="."]
position = Vector2(460.25, 599.901)
scale = Vector2(0.629167, 0.534979)
texture = ExtResource("2_3gjbi")

[node name="TimerLabel" type="Label" parent="."]
offset_left = 34.0
offset_top = -145.0
offset_right = 195.0
offset_bottom = 301.0
theme_override_font_sizes/font_size = 100

[node name="GameTimer" type="Timer" parent="."]

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
